@@ -50,7 +50,7 @@
 
 }
 
-mf=2.0;
+mf=1.0;
  
 
 is=1;
